fix(shs-5178): ocean theme contrast fixes

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_pager.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_pager.scss
@@ -37,6 +37,10 @@
         border: none;
         @include hb-pairing-color('color', 'tertiary-reversed');
       }
+
+      .hc-pairing-ocean & {
+        @include hb-pairing-color('color', 'secondary-darken-12');
+      }
     }
   }
 }
