--- a/docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.links.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.links.scss
@@ -210,6 +210,10 @@
       }
     }
   }
+
+  .hc-pairing-ocean .hb-well & {
+    @include hb-pairing-color('color', 'primary');
+  }
 }
 
 // More Link Styles
@@ -232,6 +236,16 @@
     background-size: 85%;
     transition: hb-transition(transform);
     will-change: contents;
+
+    .hc-pairing-ocean & {
+      @include hb-icon-link-arrow('primary');
+      background-size: 85%;
+    }
+
+    .hc-pairing-ocean .hb-well & {
+      @include hb-icon-link-arrow('secondary-darken-12');
+      background-size: 85%;
+    }
   }
 
   &:hover,
@@ -245,6 +259,11 @@
       @include hb-icon-link-arrow('secondary-darken-12');
       background-size: 85%;
       transform: translateX(0.25rem);
+
+      .hc-pairing-ocean & {
+        @include hb-icon-link-arrow('primary-dark');
+        background-size: 85%;
+      }
     }
   }
 
@@ -312,6 +331,14 @@
           background-size: 85%;
         }
       }
+    }
+  }
+
+  .hc-pairing-ocean & {
+    @include hb-pairing-color('color', 'secondary-darken-12');
+
+    &:hover {
+      @include hb-pairing-color('color', 'primary-dark');
     }
   }
 }
